apps/base/download/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: download
  labels:
    app: qui
spec:
  ports:
    - port: 7476
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: qui
